--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
   token:
     required: true
     description: Terraform cloud token
+  target: 
+    required: false
+    description: The output key to target
 outputs:
   output:
     description: JSON workspace outputs
